--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,7 @@ input[type="password"] {
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
-  background: #f1f1f1;
+  background: white;
 }
 
 .content {
@@ -26,29 +26,6 @@ input[type="password"] {
   background: lightblue;
 }
 
-.font10 {
-  font-size: 10px;
-}
-
-.font12 {
-  font-size: 12px;
-}
-
-.font14 {
-  font-size: 14px;
-}
-
-.font16 {
-  font-size: 16px;
-}
-
-.font18 {
-  font-size: 18px;
-}
-
-.font6 {
-  font-size: 8px;
-}
 .loginClass {
   margin: 5% auto;
   width: 40%;
